--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -12,7 +12,7 @@
       <h2>Items</h2>
       <ul class="list-group mb-4">
         {% for item in lst_item %}
-          <li> {{ item }} </li>
+          <li> {{ item.id}} - {{item.status}} - {{item.title}} </li>
         {% endfor %}
       </ul>
     </div>
