--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -15,6 +15,16 @@
           <li> {{ item.id}} - {{item.status}} - {{item.title}} </li>
         {% endfor %}
       </ul>
+      <h2>Add a new item </h2>
+      <form action="add_item" method="post" class="form-example">
+        <div class="form-example">
+            <label for="name">Enter item name: </label>
+            <input type="text" name="name" id="name" required>
+        </div>
+        <div class="form-example">
+            <input type="submit" value="Subscribe!">
+        </div>
+      </form>
     </div>
   </div>
 {% endblock %}
