should be working

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -18,11 +18,11 @@
       <h2>Add a new item </h2>
       <form action="add_item" method="post" class="form-example">
         <div class="form-example">
-            <label for="name">Enter item name: </label>
-            <input type="text" name="name" id="name" required>
+            <label for="nam_item">Enter item name: </label>
+            <input type="text" name="nam_item" id="nam_item" required>
         </div>
         <div class="form-example">
-            <input type="submit" value="Subscribe!">
+            <input type="submit" value="Submit">
         </div>
       </form>
     </div>
